--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,40 @@
+{# templates/base.html.twig #}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}Bienvenido!{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+
+</head>
+<body>
+<nav
+        class="navbar navbar-expand-lg navbar-light bg-light"
+        style="height: 70px;"
+>
+    <a class="navbar-brand" href="#">Menu-Chan</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+    <ul class="nav navbar-nav navbar-right">
+        {% if app.user %}
+            <li><a class="nav-link" href="{{ path('list') }}">Lista</a></li>
+            <li><a class="nav-link" href="{{ path('negocio_index') }}">Negocios</a></li>
+            <li><a class="nav-link" href="{{ path('producto_index') }}">Productos</a></li>
+            <li><a class="nav-link" href="{{ path('categorias_index') }}">Categorias</a></li>
+            <li><a class="nav-link" href="{{ path('user_index') }}">Usuarios</a></li>
+            <li><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
+        {% else %}
+            <li><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
+            <li>
+                <a class="nav-link" href="{{ path('registration') }}">Register</a>
+            </li>
+        {% endif %}
+    </ul>
+</nav>
+{% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+</body>
 </html>
