--- a/templates/producto/index.html.twig
+++ b/templates/producto/index.html.twig
@@ -3,73 +3,77 @@
 {% block title %}Productos{% endblock %}
 
 {% block body %}
-    <h3>Productos <select style="width: 450px;">
+    <h3>Productos des <select style="width: 450px;">
             {% for negocio in negocios %}
-                <option value="{{negocio.id}}">{{negocio.nombre}}</option>
+                <option value="{{ negocio.id }}">{{ negocio.nombre }}</option>
             {% endfor %}
         </select></h3>
-<div class="container-fluid" style="width: 95%;">
-    <div class="row">
-
-        <div class="table-responsive" id="mydatatable-container">
+    <div class="container-fluid" style="width: 95%;">
+        <div class="row">
 
             <div class="table-responsive" id="mydatatable-container">
 
-                <table class="records_list table table-striped table-bordered table-hover w-100" id="mydatatable">
+                <div class="table-responsive" id="mydatatable-container">
 
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Idcategoria</th>
-                <th>Nombre</th>
-                <th>Description</th>
-                <th>Precio</th>
-                <th>Activo</th>
-                <th>Promocion</th>
+                    <table class="records_list table table-striped table-bordered table-hover w-100" id="mydatatable">
 
-                <th>FechaAlta</th>
-                <th>FechaModificacion</th>
-                <th>UsuarioAlta</th>
-                <th>UsuarioBaja</th>
+                        <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Idcategoria</th>
+                            <th>Nombre</th>
+                            <th>Description</th>
+                            <th>Precio</th>
+                            <th>Activo</th>
+                            <th>Promocion</th>
 
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for producto in productos %}
-            <tr>
-                <td>{{ producto.id }}</td>
-                <td>{{ producto.idcategoria }}</td>
-                <td>{{ producto.nombre }}</td>
-                <td>{{ producto.Description }}</td>
-                <td>{{ producto.precio }}</td>
-                <td>{{ producto.activo ? 'Yes' : 'No' }}</td>
-                <td>{{ producto.promocion ? 'Yes' : 'No' }}</td>
+                            <th>FechaAlta</th>
+                            <th>FechaModificacion</th>
+                            <th>UsuarioAlta</th>
+                            <th>UsuarioBaja</th>
 
-                <td>{{ producto.fechaAlta ? producto.fechaAlta|date('Y-m-d') : '' }}</td>
-                <td>{{ producto.fechaModificacion ? producto.fechaModificacion|date('Y-m-d') : '' }}</td>
-                <td>{{ producto.usuarioAlta }}</td>
-                <td>{{ producto.usuarioBaja }}</td>
+                            <th>actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for producto in productos %}
+                            <tr>
+                                <td>{{ producto.id }}</td>
+                                <td>{{ producto.idcategoria }}</td>
+                                <td>{{ producto.nombre }}</td>
+                                <td>{{ producto.Description }}</td>
+                                <td>{{ producto.precio }}</td>
+                                <td>{{ producto.activo ? 'Yes' : 'No' }}</td>
+                                <td>{{ producto.promocion ? 'Yes' : 'No' }}</td>
 
-                <td>
-                    <a href="{{ path('producto_show', {'id': producto.id}) }}">show</a>
-                    <a href="{{ path('producto_edit', {'id': producto.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="12">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-                    <tfoot>
-                    </tfoot>
-                </table>
+                                <td>{{ producto.fechaAlta ? producto.fechaAlta|date('Y-m-d') : '' }}</td>
+                                <td>{{ producto.fechaModificacion ? producto.fechaModificacion|date('Y-m-d') : '' }}</td>
+                                <td>{{ producto.usuarioAlta }}</td>
+                                <td>{{ producto.usuarioBaja }}</td>
+
+                                <td>
+                                    <a href="{{ path('producto_show', {'id': producto.id}) }}">show</a>
+                                    <a href="{{ path('producto_edit', {'id': producto.id}) }}">edit</a>
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="12">no records found</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                        <tfoot>
+
+                        <div class="form-group">
+                            <a class="btn btn-primary" href="{{ path('producto_new') }}" role="button">Crear Producto</a>
+                        </div>
+                        </tfoot>
+
+                    </table>
+                </div>
+
             </div>
-
         </div>
     </div>
-</div>
 
-    <a href="{{ path('producto_new') }}">Create new</a>
 {% endblock %}
