Fix, todo funciona, added new feature add image categoria.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         class="navbar navbar-expand-lg navbar-light bg-light"
         style="height: 70px;"
 >
-    <a class="navbar-brand" href="#">Menu-Chan</a>
+    <a class="navbar-brand" href="#">Menu-Chan 2.....</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
     <ul class="nav navbar-nav navbar-right">
         {% if app.user %}
