--- a/templates/categorias/edit.html.twig
+++ b/templates/categorias/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Categorias{% endblock %}
 
 {% block body %}
-    <h3>Edit Categorias</h3>
+    <h3>Editar Categorias</h3>
 
     {{ include('categorias/_form.html.twig', {'button_label': 'Update'}) }}
 
