Corregido y funcionando carga de archivo por empresa, getpor empresa, categoaria.

--- a/templates/categorias/_form.html.twig
+++ b/templates/categorias/_form.html.twig
@@ -29,7 +29,7 @@
                                     'placeholder': 'Select an article image'
                                 }
                             }) }}
-                            <img src="{{ asset( form.vars.data.image )  }}" height="100">
+                            <img src="{{ asset( '/uploads/images/' ~ form.vars.data.image )  }}" height="100">
 
                         </div>
                     </div>
