--- a/templates/categorias/_form.html.twig
+++ b/templates/categorias/_form.html.twig
@@ -3,7 +3,11 @@
         <div class="col-md-10 ml-md-auto">
             <div class="card bg-light mb-3 mt-5" style="width: 800px">
                 <div class="card-body">
-                    <div class="card-header mb-3">Categorias .... </div>
+                    {%  if  empresa  is defined   %}
+                        <div class="card-header mb-3">Categorias para {{ empresa }} </div>
+                    {% else %}
+                        <div class="card-header mb-3">Categorias (Sin Cliente) </div>
+                    {% endif %}
                     {{ form_start(form) }}
                         <div class="form_group">
                             <div class="col-md-12 mb-3">
