--- a/templates/negocio/index.html.twig
+++ b/templates/negocio/index.html.twig
@@ -1,66 +1,74 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Catalogo de Negocios{% endblock %}
+{% block title %}Nuestros Clientes{% endblock %}
 
 {% block body %}
 
 
-    <h1>Catalogo de Negocios</h1>
+    <h4>Nuestros Clientes</h4>
+
+
+    <div class="form-group">
+        <a class="btn btn-primary" href="{{ path('negocio_new')  }}" role="button">Registrar Nuevo Cliente</a>
+    </div>
 
     <div class="container-fluid" style="width: 95%;">
-        <div class="row">
 
-            <div class="table-responsive" id="mydatatable-container">
+        <div class="card bg-light "  style="width: 95%;" >
+            <div class="card-body " style="width: 95%;" >
+                <div class="card-header">Nuestros Clientes.</div>
 
-                <div class="table-responsive" id="mydatatable-container">
+                <table class="table table-striped table-bordered table-hover w-100" id="mydatatable">
+                <thead>
+                    <tr>
+                        <th>::</th>
+                        <th style="width: 300px;">Nombre</th>
+                        <th style="width: 300px;">Ubicacion</th>
+                        <th style="width: 300px;">website</th>
+                        <th style="width: 300px;">Menu URL</th>
+                        <th>Telefono</th>
+                        <th>Estatus</th>
+                        <th> </th>
+                        <th> </th>
+                        <th> </th>
+                    </tr>
+                </thead>
 
-                    <table class="records_list table table-striped table-bordered table-hover w-100" id="mydatatable">
-                        <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Nombre</th>
-                            <th>Ubicacion</th>
-                            <th>GoogleMap</th>
-                            <th>Correo</th>
-                            <th>Telefono</th>
-                            <th>Estatus</th>
-                            <th>Logo</th>
-                            <th>Foto</th>
-                            <th>actions</th>
-                        </tr>
-                        </thead>
+                <tbody>
+                {% for negocio in negocios %}
+                    <tr>
+                        <td>{{ negocio.id }}</td>
+                        <td>{{ negocio.nombre }}</td>
+                        <td>{{ negocio.ubicacion }}</td>
+                        <td><a href="{{ negocio.website }}" target="_blank">{{ negocio.website }} </a> </td>
+                        <td><a href="{{ negocio.emenuurl }}" target="_blank">{{ negocio.emenuurl }}</a> </td>
+                        <td>{{ negocio.telefono }}</td>
+                        <td>{{ negocio.estatus ? 'Yes' : 'No' }}</td>
 
-                        <tbody>
-                        {% for negocio in negocios %}
-                            <tr>
-                                <td>{{ negocio.id }}</td>
-                                <td>{{ negocio.nombre }}</td>
-                                <td>{{ negocio.ubicacion }}</td>
-                                <td>{{ negocio.googleMap }}</td>
-                                <td>{{ negocio.correo }}</td>
-                                <td>{{ negocio.telefono }}</td>
-                                <td>{{ negocio.estatus ? 'Yes' : 'No' }}</td>
-                                <td>{{ negocio.logo }}</td>
-                                <td>{{ negocio.foto }}</td>
-                                <td>
-                                    <a href="{{ path('negocio_show', {'id': negocio.id}) }}">show</a>
-                                    <a href="{{ path('negocio_edit', {'id': negocio.id}) }}">edit</a>
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="10">no records found</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                        <tfoot>
-                        <a href="{{ path('negocio_new') }}" role="button">Crear nuevo</a>
-                        </tfoot>
-                    </table>
-                </div>
+                        <td><a class="btn btn-info" href="{{ path('negocio_show',{'id': negocio.id} ) }}" role="button">ver</a></td>
+                        <td><a class="btn btn-primary" href="{{ path('negocio_index')  }}" role="button">Editar Menu</a></td>
+                        <td><a class="btn btn-secondary" href="{{ path('categorias_negocio', {'id': negocio.id} ) }}" role="button">Categorias</a></td>
+                        <td><a class="btn btn-warning" href="{{ path('negocio_edit', {'id': negocio.id}) }}" role="button">Empresa</a></td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="10">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+                <tfoot>
+                </tfoot>
+
+                </table>
+
             </div>
         </div>
+
     </div>
+
+
+
+
 {% endblock %}
 
 
