--- a/templates/categorias/edit.html.twig
+++ b/templates/categorias/edit.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Edit Categorias{% endblock %}
 
 {% block body %}
-    <h3>Editar Categorias</h3>
 
-    {{ include('categorias/_form.html.twig', {'button_label': 'Update'}) }}
+
+    {{ include('categorias/_form.html.twig', {'button_label': 'Actualizar'}) }}
 
     <a href="{{ path('categorias_index') }}">Regresar a la lista</a>
 
