--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,36 +2,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>{% block title %}Bienvenido!{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/lieso bs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark"  style="height: 70px;" >
 
-        <a class="navbar-brand " href="#"><i>e</i>Menu Administrador ::</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
-        <ul class="nav navbar-nav navbar-right">
-            {% if app.user %}
-                <li><a class="nav-link" href="{{ path('negocio_index') }}">Negocios</a></li>
-                <li><a class="nav-link" href="{{ path('producto_index') }}">Productos</a></li>
-                <li><a class="nav-link" href="{{ path('categorias_index') }}">Categorias</a></li>
-                <li><a class="nav-link" href="{{ path('user_index') }}">Usuarios</a></li>
-                <li><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
-            {% else %}
-                <li><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
-                <li>
-                    <a class="nav-link" href="{{ path('registration') }}">Register</a>
-                </li>
-            {% endif %}
-        </ul>
+{% if app.user %}
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 70px;">
+
+        <div class="container-fluid ">
+            <!-- brand -->
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand " href="#"><i>e</i>Menu Administrador ::</a>
+            </div>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="nav-link" href="{{ path('negocio_index') }}">Negocios</a></li>
+                    <li><a class="nav-link" href="{{ path('producto_index') }}">Productos</a></li>
+                    <li><a class="nav-link" href="{{ path('categorias_index') }}">Categorias</a></li>
+
+
+                    <li class=" dropdown">
+                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Configuracion <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a  href="{{ path('registration') }}" >Registrar</a></li>
+                            <li role="separator  " class="divider"></li>
+                            <li><a  href="{{ path('user_index') }}">Usuarios</a></li>
+                            <li role="separator" class="divider"></li>
+                        </ul>
+                    </li>
+                    <!-- logout -->
+                    <li><a class="btn btn-" role="button" href="{{ path('app_logout') }}">Logout</a></li>
+                </ul>
+
+        </div>
+
     </nav>
-{% block body %}{% endblock %} {% block javascripts %}{% endblock %}
+{% else %}
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg bg-marmalade " style="height: 70px;">
+        <div class="navbar navbar-inverse container-fluid">
+
+            <div class="navbar-header">
+                <a class="navbar-brand " href="#"><i>e</i>Menu Administrador ::</a>
+            </div>
+            <ul class="nav navbar-nav">
+
+            </ul>
+        </div>
+    </nav>
+
+{% endif %}
+
+
+{% block body %}
+{% endblock %}
+
+{% block javascripts %}{% endblock %}
+
+
 </body>
 </html>
