--- a/templates/producto/_form.html.twig
+++ b/templates/producto/_form.html.twig
@@ -37,6 +37,12 @@
                         </div>
                     </div>
 
+                    <div class="form_group">
+                        <div class="col-md-12 mb-3">
+                            <img src="{{ asset( '/uploads/images/' ~ form.vars.data.imagen )  }}" height="100">
+                        </div>
+                    </div>
+
                     {{ form_rest(form) }}
 
                     <div class="form-group">
